--- a/index.html
+++ b/index.html
@@ -318,6 +318,7 @@
                 </div>
 
                 <div class="social-links">
+                    <a href="Fizuli-Hasanov-Resume.pdf" download class="btn btn-primary" style="display: inline-block;">Download Resume (PDF)</a>
                     <a href="https://www.linkedin.com/in/fizuli-hasanov/" target="_blank" class="social-link">💼</a>
                     <a href="https://github.com/fizuli20" target="_blank" class="social-link">💻</a>
                     <a href="https://public.tableau.com/app/profile/fizuli.hasanov/vizzes" target="_blank" class="social-link">📊</a>
