--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Fizuli Hasanov - Aspiring Data Analyst specializing in SQL, Python, Tableau, and Power BI">
+    <meta name="keywords" content="Data Analyst, SQL, Python, Tableau, Business Intelligence, Portfolio">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fizuli Hasanov | Data Analyst Portfolio</title>
     <link rel="stylesheet" href="style.css">
