--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </div>
                 <div class="project-links">
                     <a href="https://github.com/fizuli20" target="_blank">View Code</a>
-                    <a href="#dashboard-5">View Dashboard</a>
+                    <a href="https://public.tableau.com/app/profile/fizuli.hasanov/vizzes" target="_blank">View Dashboards</a>
                 </div>
             </div>
 
@@ -110,7 +110,7 @@
                 </div>
                 <div class="project-links">
                     <a href="https://github.com/fizuli20/order-segmentation-revenue-optimization-ecommerce" target="_blank">View Code</a>
-                    <a href="#dashboard-2">View Dashboard</a>
+                    <a href="https://public.tableau.com/app/profile/fizuli.hasanov/vizzes" target="_blank">View Dashboards</a>
                 </div>
             </div>
 
@@ -134,7 +134,7 @@
             <div class="project-card">
                 <div class="project-icon">🤖</div>
                 <h3>Cashflow Autopilot</h3>
-                <div class="project-metric">AI Hackathon Winner</div>
+                <div class="project-metric">Hackathon Prototype</div>
                 <p>Built AI prototype at Aspire × Cayu Global Hackathon for cash leak detection with runway forecast and what-if simulation capabilities.</p>
                 <div class="tech-stack">
                     <span class="tech-tag">AI</span>
@@ -158,30 +158,6 @@
             <h3 class="dashboard-title">📊 Job Market Analysis - Data Roles 2023</h3>
             <p class="dashboard-description">Global job postings, salary benchmarks, and skills analysis</p>
             <div class='tableauPlaceholder' id='viz1' style='position: relative'><noscript><a href='#'><img alt='Dashboard' src='https://public.tableau.com/static/images/Da/Data_Role_Job_Postings2023_Fizuli_Hasanov/Dashboard/1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Data_Role_Job_Postings2023_Fizuli_Hasanov/Dashboard' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https://public.tableau.com/static/images/Da/Data_Role_Job_Postings2023_Fizuli_Hasanov/Dashboard/1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>
-        </div>
-
-        <div class="dashboard-container" id="dashboard-2">
-            <h3 class="dashboard-title">📈 E-commerce KPI Overview</h3>
-            <p class="dashboard-description">Revenue metrics and order performance</p>
-            <div class='tableauPlaceholder' id='viz2' style='position: relative'><noscript><a href='#'><img alt='KPI' src='https://public.tableau.com/static/images/Or/OrderSegmentationRevenueOptimizationE-Commerce/KPInetrevenuetrend/1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='OrderSegmentationRevenueOptimizationE-Commerce/KPInetrevenuetrend' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https://public.tableau.com/static/images/Or/OrderSegmentationRevenueOptimizationE-Commerce/KPInetrevenuetrend/1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>
-        </div>
-
-        <div class="dashboard-container" id="dashboard-3">
-            <h3 class="dashboard-title">🎯 Segment Strategy Analysis</h3>
-            <p class="dashboard-description">Customer segmentation and revenue patterns</p>
-            <div class='tableauPlaceholder' id='viz3' style='position: relative'><noscript><a href='#'><img alt='Segments' src='https://public.tableau.com/static/images/Or/OrderSegmentationRevenueOptimization2E-Commerce/SegmentStrategyxRevenue/1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='OrderSegmentationRevenueOptimization2E-Commerce/SegmentStrategyxRevenue' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https://public.tableau.com/static/images/Or/OrderSegmentationRevenueOptimization2E-Commerce/SegmentStrategyxRevenue/1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>
-        </div>
-
-        <div class="dashboard-container" id="dashboard-4">
-            <h3 class="dashboard-title">⚠️ Risk Control Dashboard</h3>
-            <p class="dashboard-description">Delivery risk and discount effectiveness</p>
-            <div class='tableauPlaceholder' id='viz4' style='position: relative'><noscript><a href='#'><img alt='Risk' src='https://public.tableau.com/static/images/Or/OrderSegmentationRevenueOptimization3E-Commerce/RiskControl/1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='OrderSegmentationRevenueOptimization3E-Commerce/RiskControl' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https://public.tableau.com/static/images/Or/OrderSegmentationRevenueOptimization3E-Commerce/RiskControl/1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>
-        </div>
-
-        <div class="dashboard-container" id="dashboard-5">
-            <h3 class="dashboard-title">📊 Growth Analytics</h3>
-            <p class="dashboard-description">Revenue trends and AOV analysis</p>
-            <div class='tableauPlaceholder' id='viz5' style='position: relative'><noscript><a href='#'><img alt='Growth' src='https://public.tableau.com/static/images/ec/ecommerce-growth-analytics01/Dashboard1/1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='ecommerce-growth-analytics01/Dashboard1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https://public.tableau.com/static/images/ec/ecommerce-growth-analytics01/Dashboard1/1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>
         </div>
 
         <div class="dashboard-container" id="dashboard-6">
