--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <div class="logo">FH</div>
             <ul>
                 <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#dashboards">Dashboards</a></li>
                 <li><a href="#skills">Skills</a></li>
@@ -55,6 +56,20 @@
             </div>
         </div>
         <div class="scroll-indicator">↓</div>
+    </section>
+    <section id="about">
+      <div class="section-header">
+        <h2>About</h2>
+        <p>SQL • Python • Tableau/Power BI — turning data into clear decisions</p>
+      </div>
+
+      <div class="dashboard-container visible" style="opacity:1; transform:none;">
+        <p>
+          I’m Fizuli Hasanov, a Business Administration student in Baku focused on Data/Business Analytics.
+          I build end-to-end projects: clean data with Python, analyze with SQL, and communicate insights with dashboards.
+          I’m currently improving advanced SQL and building internship-ready portfolio projects.
+        </p>
+      </div>
     </section>
 
     <section id="projects">
