--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <div class="hero-content">
             <div class="hero-text">
                 <h1>Fizuli Hasanov</h1>
-                <h2>Aspiring Data Analyst</h2>
-                <p>Business Administration student with strong analytical skills in SQL, Python, and data visualization. Passionate about transforming data into actionable insights.</p>
+                <h2>Business & Data Analytics Intern</h2>
+                <p>Business & Data Analytics Intern with a strong foundation in SQL, business intelligence, and analytical reporting. Experienced in customer churn analysis, KPI tracking, cohort retention analysis, and e-commerce performance analytics through academic and project-based work. Interested in applying data-driven insights to support business and strategic decision-making.</p>
                 
                 <div class="hero-stats">
                     <div class="stat">
